--- a/nametso.html
+++ b/nametso.html
@@ -7,6 +7,101 @@
     <title>Nametso</title>
     <link rel="stylesheet" href="nametso.css">
     <script src="https://kit.fontawesome.com/ac9a74b25a.js" crossorigin="anonymous"></script>
+<style> @import url(https://fonts.googleapis.com/css?family=Cabin+Condensed);
+
+body{
+  background-color: #212F3D ;
+  font-family: 'Cabin Condensed', sans-serif;
+}
+main{
+  font-family: Arial, Helvetica, sans-serif;
+}
+.darkmode{
+  
+  display: flex;
+  justify-content: flex-end;
+}
+.logo{
+  
+  
+}
+
+.logo a{
+  text-decoration: none;
+  color: #FDFEFE ;
+}
+
+.explore{
+  position: -webkit-sticky;
+  position: sticky;
+  display: flex;
+  justify-content: flex-end;
+ 
+}
+
+.section{
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: 500px 200px 200px 200px;
+  margin-top: 25px;
+  
+}
+
+.pages{
+  
+  display: flex;
+  color: #FBFCFC;
+}
+
+#home{
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: 150px 115px 70px;
+}
+.intro p{
+  padding: 10px;
+}
+.resume{
+  margin-top: 50px;
+}
+.resume input{
+  padding: 10px;
+  background-color: #212F3D;
+  border: solid #2EE622;
+  color: #FBFCFC;
+}
+.navigation{
+  display: grid;
+  grid-template-columns: 15% 25%  60%;
+  color:#FDFEFE  ;
+  margin-top: 25px;
+
+}
+.responsive{
+  position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #FBFCFC ;
+  z-index: 2;
+  cursor: pointer;
+}
+
+nav a {
+  display: flex;
+  text-decoration: none;
+  justify-content: center;
+  align-content: center;
+  padding: 10px;
+  color: #34495E;
+}
+.nav{
+  padding-top: 50px;
+} </style>
 </head>
 <body>
     <main>
