--- a/nametso.html
+++ b/nametso.html
@@ -163,6 +163,21 @@ nav a {
         <i class="fa-brands fa-linkedin"></i>
     </footer>
    
-    <script src="nametso.js"></script>
+    <script>let navlist = document.getElementById("nav")
+let explore = document.getElementById("explore")
+let navigation = document.getElementById("navigation")
+
+
+
+
+function nav(){
+    document.getElementById('responsive').style.display = "block"
+    
+}
+
+function cancel(){
+    document.getElementById('responsive').style.display = "none"
+}
+ </script>
 </body>
 </html>
